# environment-sensor-rs

./: .gitignore  Cargo.toml  README.md  Useful comands.txt  itm.txt  updating_firmware.txt
lcd1602/: Cargo.toml
lcd1602/src/: lcd1602.rs  lib.rs
src/: main.rs
