[package]
# name = "rust_stm32f3discovery"
name = "led-roulette"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f3-discovery = "0.7.2"
cortex-m-semihosting = "0.3.2"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
panic-itm = "0.4.2"
stm32f3xx-hal = { version = "0.8.0", features = ["ld", "rt", "stm32f303xc"] }
f3 = "0.6.1"
lcd1602 = { path = "lcd1602" }
embedded-hal = "0.2.6"
numtoa = "0.2.4"
# dht11 = "0.3.1"
dht-sensor = "0.2.1"
