[package]
name = "led-roulette"
version = "0.1.0"
edition = "2018"


[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
panic-itm = "0.4.2"
stm32f3xx-hal = { version = "0.8.0", features = ["ld", "rt", "stm32f303xc"] }
lcd1602 = { path = "lcd1602" }
numtoa = "0.2.4"
dht-sensor = "0.2.1"
embedded-hal = "0.2.6"
